Emailing, Change password via email, Crypto token, Course routes protection from other users

--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -29,6 +29,9 @@
             </div>
 
             <input type="hidden" name="_csrf" value="{{csurf}}">
+            
+            <p><a href="/auth/reset">Forgot password?</a></p>
+
             <br><button class="btn btn-primary">Login</button>
 
         </form>
