--- a/views/course-edit.hbs
+++ b/views/course-edit.hbs
@@ -5,17 +5,17 @@
     <div class="edit-field">
         <input id="title" name="title" type="text" class ="validate" required value="{{course.title}}">
         <label for="title">Course title</label>
-        <span class="helper-text" data-error="Add course name"></span>
+        <span class="helper-text" data-error="Add course title"></span>
     </div>
         
     <div class="edit-field">
-        <input id="price" name="price" type="text" class ="validate" min="1" required value = "{{course.price}}">
+        <input id="price" name="price" type="text" class ="validate" min="1" required value="{{course.price}}">
         <label for="price">Price</label>
         <span class="helper-text" data-error="Specify the price"></span>
     </div>
     
     <div class="edit-field">
-        <input id="img" name="url" type="text" class ="validate" required value = "{{course.url}}">
+        <input id="img" name="url" type="text" class ="validate" required value="{{course.url}}">
         <label for="img">URL images</label>
         <span class="helper-text" data-error="Add images"></span>
     </div>
