--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -2,7 +2,7 @@
 
     <div class="nav-wrapper">
         
-        <a href="/" class="brand-logo">Courses application</a>
+        <a href="/" class="brand-logo">Courses store</a>
 
         <ul id="nav-mobile" class="right hide-on-med-and-down">
             
