--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -39,7 +39,7 @@
     </div>
     <div id="register" class="col s6 offset-s3">
         
-        <form method="POST" action="/auth/registration">
+        <form method="POST" action="/auth/registration" novalidate>
 
             <h1>Create account</h1>
 
