--- a/views/layouts/empty.hbs
+++ b/views/layouts/empty.hbs
@@ -1,8 +1,8 @@
 
-{{> head }}
+{{> head }} <!-- Знах в КЛЮЧОВІЙ папці partials || Програма сама розуміє де вони знаходяться, по назві папки -->
 <body>
 
-{{{ body }}}
+{{{ body }}} <!-- Данні які прийдуть з course.hbs (У випадку відкриття сторінки курсу) -->
 
 {{> footer }}
 </body>
